force-app/src/objects/c2g__AllocationTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationtemplate</customHelpPage>
    <description>Stores the allocation template information.</description>
    <fields>
        <fullName>c2g__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays whether the template is activated or deactivated. This field cannot be updated manually. To update the status of this checkbox, click Activate to display it as selected and click Deactivate to display it as deselected.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllocatedItem__c</fullName>
        <label>Allocated Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transactions</fullName>
                    <default>true</default>
                    <label>Transactions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AllocationMethod__c</fullName>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AllocationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Rule</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 5) OR (3 AND 4 AND 5)</booleanFilter>
            <errorMessage>The selected allocation rule either does not match the record type or is not activated.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Fixed Template</value>
            </filterItems>
            <filterItems>
                <field>c2g__AllocationRule__c.c2g__Type__c</field>
                <operation>equals</operation>
                <value>Fixed</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Statistical Template</value>
            </filterItems>
            <filterItems>
                <field>c2g__AllocationRule__c.c2g__Type__c</field>
                <operation>equals</operation>
                <value>Variable</value>
            </filterItems>
            <filterItems>
                <field>c2g__AllocationRule__c.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__AllocationRule__c</referenceTo>
        <relationshipLabel>Allocation Templates</relationshipLabel>
        <relationshipName>AllocationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BasisType__c</fullName>
        <label>Basis Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Statistical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CopyGla__c</fullName>
        <label>Copy GLAs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Basis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CrossCompanyMode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocate to Multiple Companies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Template Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company where the allocation is distributed according to the defined distribution criteria and the output journals or transactions are created.</description>
        <label>Distribution Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Allocation Templates</relationshipLabel>
        <relationshipName>AllocationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationItem__c</fullName>
        <label>Output</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transactions</fullName>
                    <default>true</default>
                    <label>Transactions</label>
                </value>
                <value>
                    <fullName>Journals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DistributionFields__c</fullName>
        <label>Distribution Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>General Ledger Account</fullName>
                </value>
                <value>
                    <fullName>Dimension 1</fullName>
                </value>
                <value>
                    <fullName>Dimension 2</fullName>
                </value>
                <value>
                    <fullName>Dimension 3</fullName>
                </value>
                <value>
                    <fullName>Dimension 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__IncludeDisabledDimensions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The status of this field is derived from its status in the allocation rule selected for this template, and it cannot be changed. If no allocation rule is selected, you can select or deselect this field. If selected, the disabled dimensions are included in the drop-down list of dimension fields in the Distribution Criteria tab.</inlineHelpText>
        <label>Include Disabled Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsICTOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Include Intercompany Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Local__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the distribution company on the template is local.</description>
        <label>Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PostDescription__c</fullName>
        <label>Output Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__StatisticalBasis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Basis</label>
        <referenceTo>c2g__StatisticalBasis__c</referenceTo>
        <relationshipLabel>Allocation Templates</relationshipLabel>
        <relationshipName>StatisticalBasisTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TotalPercentage__c</fullName>
        <label>Total Percentage</label>
        <summarizedField>c2g__AllocationSplitTemplate__c.c2g__PercentageSplit__c</summarizedField>
        <summaryForeignKey>c2g__AllocationSplitTemplate__c.c2g__AllocationTemplate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Allocation Template</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation Templates</pluralLabel>
    <recordTypes>
        <fullName>c2g__Fixed</fullName>
        <active>true</active>
        <description>Use this type to create a template for fixed allocations.</description>
        <label>Fixed Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__Proportional</fullName>
        <active>true</active>
        <description>Use this type to create a template for proportional allocations.</description>
        <label>Proportional Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__Statistical</fullName>
        <active>true</active>
        <description>Use this type to create a template for statistical allocations.</description>
        <label>Statistical Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>